fix(web-components): add CSS to stop card contents overflowing when large text size
Add CSS to make card contents stop overflowing when text size in browser
is increased. Update 'Reduced width' story to show both reduced and
increased widths.

--- a/packages/web-components/src/components/ic-card/ic-card.css
+++ b/packages/web-components/src/components/ic-card/ic-card.css
@@ -26,8 +26,11 @@ button {
   text-align: left;
   color: var(--ic-architechtural-black);
   transition: var(--ic-easing-transition-fast);
-  width: inherit;
   position: relative;
+  width: inherit;
+  min-width: fit-content;
+  height: fit-content;
+  min-height: 100%;
 }
 
 .dark.card,
